# gnome-shell-pano

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierignore  .prettierrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docs.json  eslint.config.js  eslint.config.ts  jest.config.ts  package.json  rollup.config.js  rollup.config.mjs  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  tests.yml
resources/: metadata.json
resources/dbus/: io.elhan.Pano.xml
resources/highlighter/pygments/: Pipfile  pyproject.toml
resources/highlighter/pygments/src/gnome_shell_pano_pygments/: __init__.py  styles.py
resources/models/: model.json
resources/po/: ar.po  bg.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fi.po  fr.po  he.po  hr.po  hu.po  is.po  it.po  ja.po  ko.po  nl.po  no.po  oc.po  pano@elhan.io.pot  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  vi.po  zh.po  zh_CN.po  zh_TW.po
resources/schemas/: org.gnome.shell.extensions.extensions-sync.gschema.xml  org.gnome.shell.extensions.pano.gschema.xml
scripts/: fix-jasmine-imports.js  generateLocale.ts
src/: extension.ts  index.d.ts
src/components/: codePanoItem.ts  colorPanoItem.ts  emojiPanoItem.ts  filePanoItem.ts  imagePanoItem.ts  linkPanoItem.ts  loadingPanoItem.ts  monitorBox.ts  panoItem.ts  panoItemHeader.ts  panoItemOverlay.ts  (+4 more)
tests/: db.test.ts  test.sh  tsconfig.json  version.test.ts
(+84 files in other folders)
